--- a/relatorio/references.bib
+++ b/relatorio/references.bib
@@ -1,3 +1,16 @@
+@inproceedings{potential-rl,
+author = {Ng, Andrew Y. and Harada, Daishi and Russell, Stuart J.},
+title = {Policy Invariance Under Reward Transformations: Theory and Application to Reward Shaping},
+year = {1999},
+isbn = {1558606122},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
+booktitle = {Proceedings of the Sixteenth International Conference on Machine Learning},
+pages = {278–287},
+numpages = {10},
+series = {ICML '99}
+}
+
 @article{schulman2017proximal,
   title   = {Proximal Policy Optimization Algorithms},
   author  = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
