tr1: curriculum learning

--- a/pitch/main.tex
+++ b/pitch/main.tex
@@ -156,11 +156,13 @@
 \end{frame}
 
 \section{Trabalhos Relacionados}
-\begin{frame}{trabalho relacionado 1}
-    bla bla bla...
+\begin{frame}{Curriculum Learning}
+    O trabalho de \citeauthor{curriculum-learning} (\citeyear{curriculum-learning}) fundamenta a ideia de aprendizado por tarefas sucessivas de complexidade crescente. Especificamente, dada a coerência entre os ambientes e tarefas apresentadas, \citeauthor{curriculum-learning} provam que essa técnica \textbf{acelera a convergência} no treino.
+
+    A princípio, entendemos o aprendizado no ambiente modelado em Machinations como a tarefa inicial (de otimização mais genérica), e o aprendizado no ambiente completo como a segunda e última tarefa do currículo (refinando a otimização anterior).
 \end{frame}
-\begin{frame}{trabalho relacionado 2}
-    bla bla bla...
+\begin{frame}{Trabalho Relacionado II}
+    O que colocar aqui..?
 \end{frame}
 
 
