--- a/pitch/references.bib
+++ b/pitch/references.bib
@@ -1,3 +1,30 @@
+@misc{progressive-neural-networks,
+      title={Progressive Neural Networks}, 
+      author={Andrei A. Rusu and Neil C. Rabinowitz and Guillaume Desjardins and Hubert Soyer and James Kirkpatrick and Koray Kavukcuoglu and Razvan Pascanu and Raia Hadsell},
+      year={2022},
+      eprint={1606.04671},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1606.04671}, 
+}
+
+@inproceedings{curriculum-learning,
+author = {Bengio, Yoshua and Louradour, J\'{e}r\^{o}me and Collobert, Ronan and Weston, Jason},
+title = {Curriculum learning},
+year = {2009},
+isbn = {9781605585161},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1553374.1553380},
+doi = {10.1145/1553374.1553380},
+abstract = {Humans and animals learn much better when the examples are not randomly presented but organized in a meaningful order which illustrates gradually more concepts, and gradually more complex ones. Here, we formalize such training strategies in the context of machine learning, and call them "curriculum learning". In the context of recent research studying the difficulty of training in the presence of non-convex training criteria (for deep deterministic and stochastic neural networks), we explore curriculum learning in various set-ups. The experiments show that significant improvements in generalization can be achieved. We hypothesize that curriculum learning has both an effect on the speed of convergence of the training process to a minimum and, in the case of non-convex criteria, on the quality of the local minima obtained: curriculum learning can be seen as a particular form of continuation method (a general strategy for global optimization of non-convex functions).},
+booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+pages = {41–48},
+numpages = {8},
+location = {Montreal, Quebec, Canada},
+series = {ICML '09}
+}
+
 @inproceedings{potential-rl,
 author = {Ng, Andrew Y. and Harada, Daishi and Russell, Stuart J.},
 title = {Policy Invariance Under Reward Transformations: Theory and Application to Reward Shaping},
