--- a/pitch/main.tex
+++ b/pitch/main.tex
@@ -161,8 +161,10 @@
 
     A princípio, entendemos o aprendizado no ambiente modelado em Machinations como a tarefa inicial (de otimização mais genérica), e o aprendizado no ambiente completo como a segunda e última tarefa do currículo (refinando a otimização anterior).
 \end{frame}
-\begin{frame}{Trabalho Relacionado II}
-    O que colocar aqui..?
+\begin{frame}{Near Optimal Behavior via Approximate State Abstraction}
+    \citeauthor{approximate-state-abstraction} (\citeyear{approximate-state-abstraction}) concluem que a qualidade de comportamentos derivados de abstrações aproximadas -- isto é, MDPs simplificados -- é preservada contra o caso base desde que a abstração seja suficientemente representativa\footnote{Conforme critérios específicos, não arbitrários.}.
+
+    Além disso, o trabalho explicita vantagens de representações abstrativas aproximadas\footnote{Em distinção a aproximações de estado baseadas em regras e equivalência exata} em termos de tratabilidade (de espaços de estado), incorporação de planejamento e flexibilidade do grau de agrupamento de estados.
 \end{frame}
 
 
@@ -294,7 +296,8 @@
     \end{outline}
 \end{frame}
 
-\begin{frame}
+\begin{frame}[shrink=5]
+    \vspace{0.75cm}
     \printbibliography
 \end{frame}
 
