--- a/pitch/references.bib
+++ b/pitch/references.bib
@@ -1,11 +1,18 @@
-@misc{progressive-neural-networks,
-      title={Progressive Neural Networks}, 
-      author={Andrei A. Rusu and Neil C. Rabinowitz and Guillaume Desjardins and Hubert Soyer and James Kirkpatrick and Koray Kavukcuoglu and Razvan Pascanu and Raia Hadsell},
-      year={2022},
-      eprint={1606.04671},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/1606.04671}, 
+@InProceedings{approximate-state-abstraction,
+  title = 	 {Near Optimal Behavior via Approximate State Abstraction},
+  author = 	 {Abel, David and Hershkowitz, David and Littman, Michael},
+  booktitle = 	 {Proceedings of The 33rd International Conference on Machine Learning},
+  pages = 	 {2915--2923},
+  year = 	 {2016},
+  editor = 	 {Balcan, Maria Florina and Weinberger, Kilian Q.},
+  volume = 	 {48},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {New York, New York, USA},
+  month = 	 {20--22 Jun},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v48/abel16.pdf},
+  url = 	 {https://proceedings.mlr.press/v48/abel16.html},
+  abstract = 	 {The combinatorial explosion that plagues planning and reinforcement learning (RL) algorithms can be moderated using state abstraction. Prohibitively large task representations can be condensed such that essential information is preserved, and consequently, solutions are tractably computable. However, exact abstractions, which treat only fully-identical situations as equivalent, fail to present opportunities for abstraction in environments where no two situations are exactly alike. In this work, we investigate approximate state abstractions, which treat nearly-identical situations as equivalent. We present theoretical guarantees of the quality of behaviors derived from four types of approximate abstractions. Additionally, we empirically demonstrate that approximate abstractions lead to reduction in task complexity and bounded loss of optimality of behavior in a variety of environments.}
 }
 
 @inproceedings{curriculum-learning,
