--- a/pitch/main.tex
+++ b/pitch/main.tex
@@ -94,7 +94,7 @@
             \begin{column}{0.5\textwidth}
                 \vspace{0.25cm}
 
-                A sintaxe Machinations \parencite{machinations} introduz regras para a representação de jogos a uma variedade de níveis de abstração.
+                A sintaxe Machinations introduz regras para a representação de jogos a uma variedade de níveis de abstração.
                 \vspace{0.25cm}
 
                 O modelo representa um jogo como um diagrama de nós e conexões de diversos tipos entre eles. Assim, o estado do jogo é a distribuição de \textbf{recursos} entre os nós.
